Thu Feb 15 09:44:54 GMT 2007  Olly Betts <olly@survex.com>

	* docs/gen_codestructure_doc.in: Add links to viewvcs on
	  svn.xapian.org.

Thu Feb 15 09:26:07 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am,docs/gen_codestructure_doc.in,
	  docs/mkdoc.pl,preautoreconf: Rework how code_structure.html
	  is generated.  Nicer output, and the html document is now
	  regenerated if any of the dir_contents files change.

Thu Feb 15 07:43:39 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.mk,configure.ac,examples/Makefile.mk,
	  makemanpage.in: Add "makemanpage" script which takes care of all
	  the magic needed to generate a man page using help2man.  This
	  script is written in perl, but so is help2man, and they're both
	  only used in maintainer-mode.

Thu Feb 15 06:33:41 GMT 2007  Olly Betts <olly@survex.com>

	* bin/Makefile.mk: Fix typos in man page generation rules.

Thu Feb 15 06:30:54 GMT 2007  Olly Betts <olly@survex.com>

	* examples/Makefile.mk: Fix typos in previous commit.

Thu Feb 15 06:03:35 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,examples/Makefile,examples/Makefile.am,
	  examples/Makefile.mk: Convert examples subdirectory to use
	  non-recursive make.  Fixes wishlist bug#97.

Thu Feb 15 05:48:38 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile,bin/Makefile.am,bin/Makefile.mk,
	  configure.ac: Convert bin subdirectory to use non-recursive make.

Wed Feb 14 19:08:49 GMT 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: There's no longer a need to remove the temporary
	  directories for muscat36 backend tests, since we've removed the
	  muscat36 backend code.

Wed Feb 14 18:58:31 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Move adjusting of INCLUDES to the top of the
	  file.
	* queryparser/Makefile.mk: Adjust INCLUDES for a VPATH build.

Wed Feb 14 18:38:16 GMT 2007  Olly Betts <olly@survex.com>
