@@ -1,3 +1,8 @@
+Thu Feb 15 09:54:55 GMT 2007  Olly Betts <olly@survex.com>
+
+	* languages/compiler/generator.c: Fix Stem::get_description() to
+	  return the right string.
+
 Thu Feb 15 09:44:54 GMT 2007  Olly Betts <olly@survex.com>
 
 	* docs/gen_codestructure_doc.in: Add links to viewvcs on
